...
    private lazy var fullNameTextField: UITextField = {
        let field = styleSheet.createFullNameTextField()
        return field
    }()
    
    private lazy var occupationTextField: UITextField = {
        let field = styleSheet.createSecondaryTextField("Enter your occupation...")
        return field
    }()
    
    private lazy var locationTextField: UITextField = {
        let field = styleSheet.createSecondaryTextField("Enter your location...")
        return field
    }()
    
    private lazy var editButton: UIButton = {
        let button = styleSheet.createEditButton()
        button.addTarget(self, action: #selector(editButtonTapped), for: .touchUpInside)
...
        let button = styleSheet.createCancelButton()
        button.addTarget(self, action: #selector(cancelButtonTapped), for: .touchUpInside)
        return button
    }()
    
    private lazy var saveGCDButton: UIButton = {
        let button = styleSheet.createSaveButton(withTitle: "Save")
        button.addTarget(self, action: #selector(saveGCDButtonTapped), for: .touchUpInside)
        return button
    }()

    private lazy var editPhotoButton: UIButton = {
        let button = styleSheet.createEditPhotoButton()
...
        
        ImageManager.shared.loadImageFromDiskWith(fileName: "User") { [weak self] image in
            guard let self = self else { return }
            if let image = image {
                self.profileImageView.image = image
            } else {
                self.profileImageView.image = UIImage(systemName: "person.circle")
            }
        }
        
        isSomethingChanged = false
    }
    
...
                self.locationTextField.layer.borderWidth = 0
            }
        }
    }
    
    private func setupNavBar() {
        title = "My Profile"
        view.backgroundColor = ThemePicker.shared.currentTheme?.backgroundColor
        
        self.navigationController?.navigationBar.prefersLargeTitles = isLargeScreenDevice
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Close",
                                                                 style: .plain,
                                                                 target: self,
                                                                 action: #selector(closeButtonTapped))
    }
    
    private func setupViews() {
...
    }
    // MARK: - Methods showing alert VC's
    
    private func showSaveSuccessAlert() {
        let alertVC = UIAlertController(title: nil, message: "Successfully saved", preferredStyle: .alert)
        
        alertVC.addAction(UIAlertAction(title: "OK", style: .cancel, handler: { [weak self] _ in
            guard let self = self else { return }
            self.setupUIIfEditingAllowedIs(false)
            self.cancelButton.isEnabled = true
        }))
        
        present(alertVC, animated: true, completion: nil)
...
        }))
        
        present(alertVC, animated: true, completion: nil)
    }
    
    private func showAddPhotoAlertVC() {
        let alertVC = UIAlertController(title: "Choose photo from...", message: nil, preferredStyle: .actionSheet)
        
        // check if camera is available
        if UIImagePickerController.isSourceTypeAvailable(.camera) {
            let cameraButton = UIAlertAction(title: "Camera", style: .default) { [weak self] _ in
                guard let self = self else { return }
                self.showImagePicker(selectedSource: .camera)
...
        let libraryButton = UIAlertAction(title: "Gallery", style: .default) { [weak self] _ in
            guard let self = self else { return }
            self.showImagePicker(selectedSource: .photoLibrary)
        }
        alertVC.addAction(libraryButton)
        
        let deleteButton = UIAlertAction(title: "Delete photo", style: .destructive) { [weak self] _ in
            guard let self = self else { return }
            self.profileImageView.image = UIImage(systemName: "person.circle")
            self.isSomethingChanged = true
        }
        
        // if there is a profile photo then add a delete button
        if profileImageView.image != UIImage(systemName: "person.circle") {
            alertVC.addAction(deleteButton)
        }
        
        let cancelButton = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        alertVC.addAction(cancelButton)
        
        present(alertVC, animated: true, completion: nil)
    }
}
// MARK: - Constraints
...
