...
    func createFullNameTextField() -> UITextField {
        let field = UITextField()
        field.textAlignment = .center
        field.font = .boldSystemFont(ofSize: 20)
        field.textColor = currentTheme?.fontColor
        field.attributedPlaceholder = NSAttributedString(
            string: "Enter your name...",
            attributes: [.foregroundColor: UIColor.lightGray]
        )
        field.isEnabled = false
        field.layer.cornerRadius = 6
        field.layer.borderColor = UIColor.systemGray.cgColor
        field.translatesAutoresizingMaskIntoConstraints = false
...
        return field
    }
    
    func createEditButton() -> UIButton {
        let button = UIButton()
        button.setTitleColor(.link, for: .normal)
        button.setTitle("Edit", for: .normal)
        button.titleLabel?.font = .boldSystemFont(ofSize: 15)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }
    
    func createCancelButton() -> UIButton {
...
